--- a/Day09/Frontend/src/index.css
+++ b/Day09/Frontend/src/index.css
@@ -10,14 +10,14 @@ html, body{
 }
 .notes{
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   gap: 1rem;
   padding: 1rem;
 }
 .note{
-  background-color: rgb(134, 134, 134);
-  color: whitesmoke;
-  max-width: 20rem;
+  background-color: rgb(249, 186, 13);
+  color: rgb(255, 244, 244);
+  width: 15rem;
   border-radius: 0.5rem;
   padding: 1rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -25,9 +25,36 @@ html, body{
 .note-create-form{
   padding: 1.2rem;
   display: flex;
-  gap: 0.2rem;
+  gap: 0.5rem;
+  background-color: rgba(240, 240, 240, 0.094);
+  border: 1px solid rgba(255, 255, 255, 0.346);
+  align-items: center;
+  justify-content: center;
 }
 .note-create-form input{
   padding: 0.5rem;
-  border-radius: 0.2rem;
+  border-radius: 0.3rem;
+  border: none;
+}
+
+button{
+  padding: 0.2rem;
+  border-radius: 0.3rem;
+  border: none;
+}
+.btn-form{
+  background-color: royalblue;
+  color: whitesmoke;
+  padding: 0.5rem;
+}
+button.btn2{
+  background-color: rgb(8, 131, 2);
+  color: whitesmoke;
+  margin-left: 0.2rem;
+  margin-top: 0.7rem;
+}
+button.btn1{
+  background-color: red;
+  color: whitesmoke;
+  margin-top: 0.7rem;
 }
