--- a/InstaClone/Frontend/src/style.scss
+++ b/InstaClone/Frontend/src/style.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 html, body{
     height: 100%;
@@ -9,4 +10,5 @@ html, body{
 }
 html{
     background-color: rgb(24, 24, 24);
+    color: whitesmoke;
 }
